--- a/src/app/styles/main.css
+++ b/src/app/styles/main.css
@@ -7,5 +7,6 @@
 @import './settings.css';
 @import './servers.css';
 @import './console.css';
+@import './commands.css';
 
 /* Any additional global styles or overrides can go here */
